src/test/deca/context/valid/with_object/class_in_class3.deca
class A {}

class B extends A{
    A a = new A();
    A aa;
    A metA(A w){
        return w;
    }
}