src/test/deca/context/invalid/with_object/instanceof_op_wrong_right.deca
{
    A a = new A();
    a instanceof int;
}